fix(prefare): hide pills on solo full screen reconstructed alerts
In b84e89a7, we improved the verbiage in the alerts banner for prefare
solo screens when a reconstructed alert took over the whole screen.
However, that commit failed to account for the styling of greater than
two route pills. As a result, a theoretical station closure with three
or more pills would result in cutoff text and/or route pills with no
vertical spacing between them (on wrapped text). In discussing this with
the design team, we've agreed to remove the pills from this particular
case.

--- a/assets/css/pre_fare/alert-banner.scss
+++ b/assets/css/pre_fare/alert-banner.scss
@@ -35,19 +35,6 @@
   margin: 0 20px;
 }
 
-.alert-banner__route-pill--short--multiple-routes {
-  height: 96px;
-  margin: 0 20px;
-
-  &:first-of-type {
-    margin: 0 10px 0 20px;
-  }
-
-  &:last-of-type {
-    margin: 0 20px 0 10px;
-  }
-}
-
 .alert-banner__route-pill--long {
   margin: 16.2px 0 0.8px;
 }
